2.0.14 - added Velocity support